🔽 Hide Basic Redis Test Section by Default
- Changed toggle arrow from ▼ to ▶ to show section is collapsed
- Basic Redis comparison section is now hidden by default
- Users can still access it by clicking the header to expand
- Keeps the UI clean while preserving functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -454,7 +454,7 @@
     <div class="glass glass-hover p-4 sm:p-6 lg:p-8 rounded-2xl mb-6">
       <div class="flex items-center justify-between mb-6 cursor-pointer" onclick="toggleSection('basicRedisComparison')">
         <h2 class="text-xl sm:text-2xl font-semibold text-gray-100">⚠️ Basic Redis (No Retry Strategy) - Problems Demo</h2>
-        <span id="basicRedisComparisonToggle" class="text-gray-400 text-xl">▼</span>
+        <span id="basicRedisComparisonToggle" class="text-gray-400 text-xl">▶</span>
       </div>
       
       <div id="basicRedisComparisonContent" class="hidden">
